# CBLYTurboJPEG

./: README.md  README.md.bak
jni/: Application.mk
jni/libyuv/: Android.mk
jpegturbo/: CMakeLists.txt  build.gradle
jpegturbo/src/androidTest/java/com/cbly/jpegturbo/: ExampleInstrumentedTest.java
jpegturbo/src/main/: AndroidManifest.xml
jpegturbo/src/main/cpp/: libjpegTurbo.cpp
jpegturbo/src/main/java/com/cbly/jpegturbo/: TJ.java  TurboJpegLib.java
jpegturbo/src/main/res/values/: strings.xml
jpegturbo/src/test/java/com/cbly/jpegturbo/: ExampleUnitTest.java
